@@ -64,7 +64,7 @@
 #define AVC1394_GET_OPCODE(x) (((x) & 0x0000FF00) >> 8)
 #define AVC1394_GET_OPERAND0(x) ((x) & 0x000000FF)
 #define AVC1394_GET_OPERAND(x, n) (((x) & (0xFF000000 >> ((((n)-1)%4)*8))) >> ((((n)-1)%4)*8))
-#define AVC1394_GET_RESPONSE_OPERAND(x, n) (((x) & (0xFF000000 >> (((n)%4)*8))) >> (((n)%4)*8))
+#define AVC1394_GET_RESPONSE_OPERAND(x, n) (((x) & (0xFF000000 >> (((n)%4)*8))) >> (((3-(n))%4)*8))
 
 /* AV/C command types */
 #define AVC1394_CTYPE_CONTROL 0x00000000
@@ -81,11 +81,18 @@
 
 /* AV/C subunit types */
 #define AVC1394_SUBUNIT_TYPE_VIDEO_MONITOR (0 <<19)
+#define AVC1394_SUBUNIT_TYPE_AUDIO (1 <<19)
+#define AVC1394_SUBUNIT_TYPE_PRINTER (2 <<19)
 #define AVC1394_SUBUNIT_TYPE_DISC_RECORDER (3 <<19)
 #define AVC1394_SUBUNIT_TYPE_TAPE_RECORDER (4 <<19)
 #define AVC1394_SUBUNIT_TYPE_VCR (4 <<19)
 #define AVC1394_SUBUNIT_TYPE_TUNER (5 <<19)
+#define AVC1394_SUBUNIT_TYPE_CA (6 <<19)
 #define AVC1394_SUBUNIT_TYPE_VIDEO_CAMERA (7 <<19)
+#define AVC1394_SUBUNIT_TYPE_PANEL (9 <<19)
+#define AVC1394_SUBUNIT_TYPE_BULLETIN_BOARD (0xA <<19)
+#define AVC1394_SUBUNIT_TYPE_CAMERA_STORAGE (0xB <<19)
+#define AVC1394_SUBUNIT_TYPE_MUSIC (0xC <<19)
 #define AVC1394_SUBUNIT_TYPE_VENDOR_UNIQUE (0x1C <<19)
 #define AVC1394_SUBUNIT_TYPE_EXTENDED (0x1E <<19)	/* Not implemented */
 #define AVC1394_SUBUNIT_TYPE_UNIT (0x1F <<19)
@@ -109,6 +116,22 @@
 #define AVC1394_SUBUNIT_ID_4 (4 << 16)
 #define AVC1394_SUBUNIT_ID_EXTENDED (5 <<16)	/* Not implemented */
 #define AVC1394_SUBUNIT_ID_IGNORE (7 << 16)
+
+/* AV/C subunit capabilities */
+#define AVC1394_SUBUNIT_MUSIC_CAPABILITY_GENERAL (1<<0)
+#define AVC1394_SUBUNIT_MUSIC_CAPABILITY_AUDIO (1<<1)
+#define AVC1394_SUBUNIT_MUSIC_CAPABILITY_MIDI (1<<2)
+#define AVC1394_SUBUNIT_MUSIC_CAPABILITY_SMPTE (1<<3)
+#define AVC1394_SUBUNIT_MUSIC_CAPABILITY_SAMPLECOUNT (1<<4)
+#define AVC1394_SUBUNIT_MUSIC_CAPABILITY_AUDIOSYNC (1<<5)
+#define AVC1394_SUBUNIT_MUSIC_CAPABILITY_RESERVED (1<<6)
+#define AVC1394_SUBUNIT_MUSIC_CAPABILITY_MORE (1<<7)
+
+#define AVC1394_SUBUNIT_MUSIC_CAPABILITY_NONBLOCKING (1<<0)
+#define AVC1394_SUBUNIT_MUSIC_CAPABILITY_BLOCKING (1<<1)
+
+#define AVC1394_SUBUNIT_MUSIC_CAPABILITY_AUDIOSYNC_BUS (1<<0)
+#define AVC1394_SUBUNIT_MUSIC_CAPABILITY_AUDIOSYNC_EXTERNAL (1<<0)
 
 /* AV/C Unit commands */
 #define AVC1394_COMMAND_CHANNEL_USAGE 0x00001200
